@@ -1,3 +1,8 @@
 #!/bin/bash
 
-java -Xmx2G -Xms2G -Xmn1G -jar ./carrying-server/target/carrying-server-jar-with-dependencies.jar ${1} ${2}
+java \
+    -XX:+UseBiasedLocking\
+    -Xmx4G \
+    -Xms4G \
+    -Xmn2G \
+    -jar ./carrying-server/target/carrying-server-jar-with-dependencies.jar ${1} ${2} ./carrying-server/carrying-server.properties
